# gitops

./: .gitignore  Dockerfile  ReadMe  docker-compose-file-template.yml  docker-compose.yml  start.py
.github/workflows/: branch_test.yml  main.yml  main_deploy.yml  precomit-yml  teamatch_test.yml  test.yml
app/: Dockerfile  main.py  pyproject.toml  run_test.sh
app/backend/: main.py  run.py  utils.py
app/backend/test/: test_read_main.py
app/core/: config.py
app/test/: test_read_main.py  test_start_app.py
backend/: pyproject.toml  run_test.sh  start.py
backend/alembic/: env.py
backend/alembic/versions/: a044ddc146c1_first_migration.py
backend/backend/: __init__.py  main.py  utils.py
backend/backend/auth/: oauth2.py
backend/backend/database/: database.py  email.py  models.py  schemas.py
backend/backend/models/: post.py  user.py
backend/backend/routers/: auth.py  post.py  user.py
backend/backend/schemas/: post.py  user.py
backend/test/: test_read_main.py
scripts/: env.sh
test/: test_user.py
