[tool.poetry]
name = "observe"
version = "0.1.0"
description = ""
authors = ["BOBO-LU <luwenkai0820@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pytz = "^2022.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
