[tool.poetry]
name = "observe"
version = "0.1.0"
description = ""
authors = ["BOBO-LU <luwenkai0820@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytz = "^2022.7.1"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
pytest = "^7.2.1"
asynctest = "^0.13.0"
aiohttp = "^3.8.4"
httpx = "^0.23.3"
pytest-html = "^3.2.0"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "backend", "app/backend"
]